feat: add gatekeeper
